--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="background">
+        <div class="first-lane"></div>
+        <div class="second-lane"></div>
+        <div class="third-lane"></div>
+    </div>
+    <div class="wind-shield o1">
+        <div class="rear-view-mirror">
+            <div class="stick"></div>
+            <div class="mirror"></div>
+        </div>
+        <div class="glass">
 
+            <div class="left-glass"></div>
+            <div class="right-glass"></div>
+        </div>
+        <div class="intil"></div>
+        
+        <div class="left seat"></div>
+        <div class="right seat">
+            <div class="steering-wheel">
+
+            </div>
+        </div>
+
+    </div>
+
+    <div class="container">
+
+        <div class="beam left-beam o1">
+            <div class="inner-white">
+
+            </div>
+        </div>
+        <div class="beam right-beam o3">
+            <div class="inner-white">
+
+            </div>
+
+        </div>
+
+        <div class="hoodie o2">
+            <div class="hoodie-top">
+
+            </div>
+        </div>
+          <div class="left-light light o4">
+        <div class="inner inner-left ">
+            <div class=" inner-2 inner-2-left o4"></div>
+        </div>
+    </div>
+    <div class="logo o5">
+        <div class="top">
+            <div class="circle"></div>
+            <div class="white-circle"></div>
+        </div>
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+        <div class="line4"></div>
+    </div>
+    <div class="right-light light o6">
+        <div class="inner inner-right">
+            <div class="inner-2-right inner-2"></div>
+        </div>
+
+        
+    </div>
+</div>
+<div class="under">
+
+</div>
+             <div class="tires">
+                 <div class="tire"></div>
+                 <div class="tire"></div>
+             </div> 
+
+
+  
+</body>
+</html>
